--- a/openApiDocs/beta/Users.Actions.yml
+++ b/openApiDocs/beta/Users.Actions.yml
@@ -19866,6 +19866,10 @@ paths:
       tags:
         - users.Actions
       summary: Invoke action bulkResize
+      description: 'Perform a bulk resize action to resize a group of cloudPCs that have successfully passed validation. If any devices cannot be resized, those devices will indicate ''resize failed''. The remaining devices will be `provisioned` for the resize process.'
+      externalDocs:
+        description: Find more info here
+        url: https://docs.microsoft.com/graph/api/cloudpc-bulkresize?view=graph-rest-1.0
       operationId: user.cloudPC_bulkResize
       parameters:
         - name: user-id
@@ -19922,6 +19926,10 @@ paths:
       tags:
         - users.Actions
       summary: Invoke action validateBulkResize
+      description: Validate that a set of cloudPC devices meet the requirements to be bulk resized.
+      externalDocs:
+        description: Find more info here
+        url: https://docs.microsoft.com/graph/api/cloudpc-validatebulkresize?view=graph-rest-1.0
       operationId: user.cloudPC_validateBulkResize
       parameters:
         - name: user-id
@@ -35652,6 +35660,7 @@ components:
       properties:
         cloudPcId:
           type: string
+          description: The cloudPC id that corresponds to its unique identifier.
           nullable: true
         validationResult:
           $ref: '#/components/schemas/microsoft.graph.cloudPcResizeValidationCode'
@@ -36825,11 +36834,42 @@ components:
         - collectDiagnostics
         - initiateMobileDeviceManagementKeyRecovery
         - initiateOnDemandProactiveRemediation
+        - unknownFutureValue
       type: string
       x-ms-enum:
         name: managedDeviceRemoteAction
         modelAsString: false
         values:
+          - value: retire
+            description: Name of the retire action.
+            name: retire
+          - value: delete
+            description: Name of the delete action.
+            name: delete
+          - value: fullScan
+            description: Name of the full Scan action.
+            name: fullScan
+          - value: quickScan
+            description: Name of the Quick Scan action.
+            name: quickScan
+          - value: signatureUpdate
+            description: Signature Update action
+            name: signatureUpdate
+          - value: wipe
+            description: Name of the wipe action.
+            name: wipe
+          - value: customTextNotification
+            description: Name of the Custom Text Notification action.
+            name: customTextNotification
+          - value: rebootNow
+            description: Name of the reboot now action.
+            name: rebootNow
+          - value: setDeviceName
+            description: Set Device Name action.
+            name: setDeviceName
+          - value: syncDevice
+            description: Sync Device action.
+            name: syncDevice
           - value: deprovision
             description: Name of the deprovision action.
             name: deprovision
@@ -36854,6 +36894,9 @@ components:
           - value: initiateOnDemandProactiveRemediation
             description: Name of action to initiate On Demand Proactive Remediation
             name: initiateOnDemandProactiveRemediation
+          - value: unknownFutureValue
+            description: Evolvable enum member
+            name: unknownFutureValue
     microsoft.graph.bulkManagedDeviceActionResult:
       title: bulkManagedDeviceActionResult
       type: object
@@ -37072,6 +37115,7 @@ components:
               type: array
               items:
                 $ref: '#/components/schemas/microsoft.graph.onlineMeetingRole'
+              description: 'Specifies whose identity will be anonymized in the meeting. Possible values are: attendee. The attendee value cannot be removed through a PATCH operation once added.'
             attendeeReport:
               type: string
               description: The content stream of the attendee report of a Teams live event. Read-only.
@@ -52671,11 +52715,11 @@ components:
       properties:
         key:
           type: string
-          description: Contains the name of the field that a value is associated with.
+          description: Key.
           nullable: true
         value:
           type: string
-          description: Contains the corresponding value for the specified key.
+          description: Value.
           nullable: true
       additionalProperties:
         type: object
@@ -52859,7 +52903,6 @@ components:
               $ref: '#/components/schemas/microsoft.graph.printerDefaults'
             displayName:
               type: string
-              nullable: true
             isAcceptingJobs:
               type: boolean
               nullable: true
@@ -56991,7 +57034,6 @@ components:
             isFetchable:
               type: boolean
               description: 'If true, document can be fetched by printer.'
-              nullable: true
             redirectedFrom:
               type: string
               description: 'Contains the source job URL, if the job has been redirected from another printer.'
@@ -57024,17 +57066,14 @@ components:
             appVersion:
               type: string
               description: The connector's version.
-              nullable: true
             deviceHealth:
               $ref: '#/components/schemas/microsoft.graph.deviceHealth'
             displayName:
               type: string
               description: The name of the connector.
-              nullable: true
             fullyQualifiedDomainName:
               type: string
               description: The connector machine's hostname.
-              nullable: true
             location:
               $ref: '#/components/schemas/microsoft.graph.printerLocation'
             name:
@@ -57043,7 +57082,6 @@ components:
             operatingSystem:
               type: string
               description: The connector machine's operating system version.
-              nullable: true
             registeredDateTime:
               pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
               type: string
@@ -58720,6 +58758,7 @@ components:
         - grayscale
         - color
         - auto
+        - unknownFutureValue
       type: string
     microsoft.graph.integerRange:
       title: integerRange
@@ -58751,6 +58790,7 @@ components:
         - flipOnLongEdge
         - flipOnShortEdge
         - oneSided
+        - unknownFutureValue
       type: string
     microsoft.graph.printerFeedDirection:
       title: printerFeedDirection
@@ -58799,6 +58839,7 @@ components:
         - clockwiseFromBottomLeft
         - counterclockwiseFromBottomRight
         - clockwiseFromBottomRight
+        - unknownFutureValue
       type: string
     microsoft.graph.printOrientation:
       title: printOrientation
@@ -58807,6 +58848,7 @@ components:
         - landscape
         - reverseLandscape
         - reversePortrait
+        - unknownFutureValue
       type: string
     microsoft.graph.printQuality:
       title: printQuality
@@ -59830,10 +59872,10 @@ components:
       properties:
         acquiredByPrinter:
           type: boolean
+          nullable: true
         description:
           type: string
           description: A human-readable description of the print job's current processing state. Read-only.
-          nullable: true
         details:
           type: array
           items:
@@ -60457,6 +60499,7 @@ components:
         - completed
         - canceled
         - aborted
+        - unknownFutureValue
       type: string
     microsoft.graph.printerDocumentConfiguration:
       title: printerDocumentConfiguration
