--- a/openApiDocs/beta/DeviceManagement.Actions.yml
+++ b/openApiDocs/beta/DeviceManagement.Actions.yml
@@ -6755,6 +6755,78 @@ paths:
         default:
           $ref: '#/components/responses/error'
       x-ms-docs-operation-type: action
+  /deviceManagement/reports/microsoft.graph.getAutopilotDeploymentStatus:
+    post:
+      tags:
+        - deviceManagement.Actions
+      summary: Invoke action getAutopilotDeploymentStatus
+      operationId: deviceManagement.report_getAutopilotDeploymentStatus
+      requestBody:
+        description: Action parameters
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                  nullable: true
+                select:
+                  type: array
+                  items:
+                    type: string
+                    nullable: true
+                search:
+                  type: string
+                  nullable: true
+                groupBy:
+                  type: array
+                  items:
+                    type: string
+                    nullable: true
+                orderBy:
+                  type: array
+                  items:
+                    type: string
+                    nullable: true
+                skip:
+                  maximum: 2147483647
+                  minimum: -2147483648
+                  type: integer
+                  format: int32
+                  nullable: true
+                top:
+                  maximum: 2147483647
+                  minimum: -2147483648
+                  type: integer
+                  format: int32
+                  nullable: true
+                sessionId:
+                  type: string
+                  nullable: true
+                filter:
+                  type: string
+                  nullable: true
+              additionalProperties:
+                type: object
+        required: true
+      responses:
+        2XX:
+          description: Success
+          content:
+            application/octet-stream:
+              schema:
+                type: object
+                properties:
+                  value:
+                    type: string
+                    format: base64url
+                    nullable: true
+                additionalProperties:
+                  type: object
+        default:
+          $ref: '#/components/responses/error'
+      x-ms-docs-operation-type: action
   /deviceManagement/reports/microsoft.graph.getCachedReport:
     post:
       tags:
@@ -12400,6 +12472,10 @@ paths:
       tags:
         - deviceManagement.Actions
       summary: Invoke action bulkResize
+      description: 'Perform a bulk resize action to resize a group of cloudPCs that have successfully passed validation. If any devices cannot be resized, those devices will indicate ''resize failed''. The remaining devices will be `provisioned` for the resize process.'
+      externalDocs:
+        description: Find more info here
+        url: https://docs.microsoft.com/graph/api/cloudpc-bulkresize?view=graph-rest-1.0
       operationId: deviceManagement.virtualEndpoint.cloudPC_bulkResize
       requestBody:
         description: Action parameters
@@ -12447,6 +12523,10 @@ paths:
       tags:
         - deviceManagement.Actions
       summary: Invoke action validateBulkResize
+      description: Validate that a set of cloudPC devices meet the requirements to be bulk resized.
+      externalDocs:
+        description: Find more info here
+        url: https://docs.microsoft.com/graph/api/cloudpc-validatebulkresize?view=graph-rest-1.0
       operationId: deviceManagement.virtualEndpoint.cloudPC_validateBulkResize
       requestBody:
         description: Action parameters
@@ -14210,11 +14290,42 @@ components:
         - collectDiagnostics
         - initiateMobileDeviceManagementKeyRecovery
         - initiateOnDemandProactiveRemediation
+        - unknownFutureValue
       type: string
       x-ms-enum:
         name: managedDeviceRemoteAction
         modelAsString: false
         values:
+          - value: retire
+            description: Name of the retire action.
+            name: retire
+          - value: delete
+            description: Name of the delete action.
+            name: delete
+          - value: fullScan
+            description: Name of the full Scan action.
+            name: fullScan
+          - value: quickScan
+            description: Name of the Quick Scan action.
+            name: quickScan
+          - value: signatureUpdate
+            description: Signature Update action
+            name: signatureUpdate
+          - value: wipe
+            description: Name of the wipe action.
+            name: wipe
+          - value: customTextNotification
+            description: Name of the Custom Text Notification action.
+            name: customTextNotification
+          - value: rebootNow
+            description: Name of the reboot now action.
+            name: rebootNow
+          - value: setDeviceName
+            description: Set Device Name action.
+            name: setDeviceName
+          - value: syncDevice
+            description: Sync Device action.
+            name: syncDevice
           - value: deprovision
             description: Name of the deprovision action.
             name: deprovision
@@ -14239,6 +14350,9 @@ components:
           - value: initiateOnDemandProactiveRemediation
             description: Name of action to initiate On Demand Proactive Remediation
             name: initiateOnDemandProactiveRemediation
+          - value: unknownFutureValue
+            description: Evolvable enum member
+            name: unknownFutureValue
     microsoft.graph.bulkManagedDeviceActionResult:
       title: bulkManagedDeviceActionResult
       type: object
@@ -15584,6 +15698,7 @@ components:
       properties:
         cloudPcId:
           type: string
+          description: The cloudPC id that corresponds to its unique identifier.
           nullable: true
         validationResult:
           $ref: '#/components/schemas/microsoft.graph.cloudPcResizeValidationCode'
@@ -18003,26 +18118,26 @@ components:
               nullable: true
             categoryId:
               type: string
-              description: Specify category in which the setting is under. Support $filters.
+              description: Specifies the area group under which the setting is configured in a specified configuration service provider (CSP)
               nullable: true
             description:
               type: string
-              description: Description of the setting.
+              description: Description of the item
               nullable: true
             displayName:
               type: string
-              description: 'Name of the setting. For example: Allow Toast.'
+              description: Display name of the item
               nullable: true
             helpText:
               type: string
-              description: Help text of the setting. Give more details of the setting.
+              description: Help text of the item
               nullable: true
             infoUrls:
               type: array
               items:
                 type: string
                 nullable: true
-              description: List of links more info for the setting can be found at.
+              description: List of links more info for the setting can be found at
             keywords:
               type: array
               items:
@@ -18046,7 +18161,7 @@ components:
               description: List of referred setting information.
             rootDefinitionId:
               type: string
-              description: Root setting definition id if the setting is a child setting.
+              description: Root setting definition if the setting is a child setting.
               nullable: true
             settingUsage:
               $ref: '#/components/schemas/microsoft.graph.deviceManagementConfigurationSettingUsage'
@@ -22974,6 +23089,7 @@ components:
               type: array
               items:
                 $ref: '#/components/schemas/microsoft.graph.onlineMeetingRole'
+              description: 'Specifies whose identity will be anonymized in the meeting. Possible values are: attendee. The attendee value cannot be removed through a PATCH operation once added.'
             attendeeReport:
               type: string
               description: The content stream of the attendee report of a Teams live event. Read-only.
@@ -31070,7 +31186,6 @@ components:
               $ref: '#/components/schemas/microsoft.graph.printerDefaults'
             displayName:
               type: string
-              nullable: true
             isAcceptingJobs:
               type: boolean
               nullable: true
@@ -31400,11 +31515,11 @@ components:
       properties:
         key:
           type: string
-          description: Contains the name of the field that a value is associated with.
+          description: Key.
           nullable: true
         value:
           type: string
-          description: Contains the corresponding value for the specified key.
+          description: Value.
           nullable: true
       additionalProperties:
         type: object
@@ -36950,7 +37065,6 @@ components:
             isFetchable:
               type: boolean
               description: 'If true, document can be fetched by printer.'
-              nullable: true
             redirectedFrom:
               type: string
               description: 'Contains the source job URL, if the job has been redirected from another printer.'
@@ -36983,17 +37097,14 @@ components:
             appVersion:
               type: string
               description: The connector's version.
-              nullable: true
             deviceHealth:
               $ref: '#/components/schemas/microsoft.graph.deviceHealth'
             displayName:
               type: string
               description: The name of the connector.
-              nullable: true
             fullyQualifiedDomainName:
               type: string
               description: The connector machine's hostname.
-              nullable: true
             location:
               $ref: '#/components/schemas/microsoft.graph.printerLocation'
             name:
@@ -37002,7 +37113,6 @@ components:
             operatingSystem:
               type: string
               description: The connector machine's operating system version.
-              nullable: true
             registeredDateTime:
               pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
               type: string
@@ -39511,6 +39621,7 @@ components:
         - grayscale
         - color
         - auto
+        - unknownFutureValue
       type: string
     microsoft.graph.integerRange:
       title: integerRange
@@ -39542,6 +39653,7 @@ components:
         - flipOnLongEdge
         - flipOnShortEdge
         - oneSided
+        - unknownFutureValue
       type: string
     microsoft.graph.printerFeedDirection:
       title: printerFeedDirection
@@ -39590,6 +39702,7 @@ components:
         - clockwiseFromBottomLeft
         - counterclockwiseFromBottomRight
         - clockwiseFromBottomRight
+        - unknownFutureValue
       type: string
     microsoft.graph.printOrientation:
       title: printOrientation
@@ -39598,6 +39711,7 @@ components:
         - landscape
         - reverseLandscape
         - reversePortrait
+        - unknownFutureValue
       type: string
     microsoft.graph.printQuality:
       title: printQuality
@@ -40621,10 +40735,10 @@ components:
       properties:
         acquiredByPrinter:
           type: boolean
+          nullable: true
         description:
           type: string
           description: A human-readable description of the print job's current processing state. Read-only.
-          nullable: true
         details:
           type: array
           items:
@@ -41482,6 +41596,7 @@ components:
         - completed
         - canceled
         - aborted
+        - unknownFutureValue
       type: string
     microsoft.graph.printerDocumentConfiguration:
       title: printerDocumentConfiguration
