--- a/openApiDocs/beta/Sites.yml
+++ b/openApiDocs/beta/Sites.yml
@@ -8873,11 +8873,11 @@ paths:
     get:
       tags:
         - groups.site
-      summary: List operations
-      description: Get the list of richLongRunningOperations associated with a list.
+      summary: Get metadata for a list
+      description: 'Return the metadata for a [list][].'
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/list-list-operations?view=graph-rest-1.0
+        url: https://docs.microsoft.com/graph/api/list-get?view=graph-rest-1.0
       operationId: group.site_GetList
       parameters:
         - name: group-id
@@ -55864,11 +55864,11 @@ paths:
     get:
       tags:
         - sites.list
-      summary: List operations
-      description: Get the list of richLongRunningOperations associated with a list.
+      summary: Get metadata for a list
+      description: 'Return the metadata for a [list][].'
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/list-list-operations?view=graph-rest-1.0
+        url: https://docs.microsoft.com/graph/api/list-get?view=graph-rest-1.0
       operationId: site_GetList
       parameters:
         - name: site-id
@@ -96725,6 +96725,7 @@ components:
               type: array
               items:
                 $ref: '#/components/schemas/microsoft.graph.onlineMeetingRole'
+              description: 'Specifies whose identity will be anonymized in the meeting. Possible values are: attendee. The attendee value cannot be removed through a PATCH operation once added.'
             attendeeReport:
               type: string
               description: The content stream of the attendee report of a Teams live event. Read-only.
@@ -97950,11 +97951,11 @@ components:
       properties:
         key:
           type: string
-          description: Contains the name of the field that a value is associated with.
+          description: Key.
           nullable: true
         value:
           type: string
-          description: Contains the corresponding value for the specified key.
+          description: Value.
           nullable: true
       additionalProperties:
         type: object
@@ -105685,7 +105686,6 @@ components:
               $ref: '#/components/schemas/microsoft.graph.printerDefaults'
             displayName:
               type: string
-              nullable: true
             isAcceptingJobs:
               type: boolean
               nullable: true
@@ -110266,7 +110266,6 @@ components:
             isFetchable:
               type: boolean
               description: 'If true, document can be fetched by printer.'
-              nullable: true
             redirectedFrom:
               type: string
               description: 'Contains the source job URL, if the job has been redirected from another printer.'
@@ -110299,17 +110298,14 @@ components:
             appVersion:
               type: string
               description: The connector's version.
-              nullable: true
             deviceHealth:
               $ref: '#/components/schemas/microsoft.graph.deviceHealth'
             displayName:
               type: string
               description: The name of the connector.
-              nullable: true
             fullyQualifiedDomainName:
               type: string
               description: The connector machine's hostname.
-              nullable: true
             location:
               $ref: '#/components/schemas/microsoft.graph.printerLocation'
             name:
@@ -110318,7 +110314,6 @@ components:
             operatingSystem:
               type: string
               description: The connector machine's operating system version.
-              nullable: true
             registeredDateTime:
               pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
               type: string
@@ -112187,6 +112182,7 @@ components:
         - grayscale
         - color
         - auto
+        - unknownFutureValue
       type: string
     microsoft.graph.integerRange:
       title: integerRange
@@ -112218,6 +112214,7 @@ components:
         - flipOnLongEdge
         - flipOnShortEdge
         - oneSided
+        - unknownFutureValue
       type: string
     microsoft.graph.printerFeedDirection:
       title: printerFeedDirection
@@ -112266,6 +112263,7 @@ components:
         - clockwiseFromBottomLeft
         - counterclockwiseFromBottomRight
         - clockwiseFromBottomRight
+        - unknownFutureValue
       type: string
     microsoft.graph.printOrientation:
       title: printOrientation
@@ -112274,6 +112272,7 @@ components:
         - landscape
         - reverseLandscape
         - reversePortrait
+        - unknownFutureValue
       type: string
     microsoft.graph.printQuality:
       title: printQuality
@@ -113297,10 +113296,10 @@ components:
       properties:
         acquiredByPrinter:
           type: boolean
+          nullable: true
         description:
           type: string
           description: A human-readable description of the print job's current processing state. Read-only.
-          nullable: true
         details:
           type: array
           items:
@@ -113907,6 +113906,7 @@ components:
         - completed
         - canceled
         - aborted
+        - unknownFutureValue
       type: string
     microsoft.graph.printerDocumentConfiguration:
       title: printerDocumentConfiguration
